Feat: integrate TMDB posters in movie browser

--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -7,3 +7,7 @@ MYSQL_PORT = 3306
 MYSQL_USER = "your-username"
 MYSQL_PASSWORD = "your-password"
 MYSQL_DATABASE = "movielens"
+
+# TMDB (The Movie Database) API key (optional but recommended for posters)
+# Sign up at https://www.themoviedb.org/, create an API key and paste it here.
+TMDB_API_KEY = "your-tmdb-api-key"
