--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pandas>=2.1.0
-numpy>=1.26,<2.0
-scikit-learn>=1.3.0
+numpy>=2.0.0
+scikit-learn==1.7.2
 scipy>=1.11.0
 seaborn>=0.13.0
 matplotlib>=3.8.0
